test_programs/compile_failure/regression_10647/src/main.nr
#[oracle(print)]
unconstrained fn foo() {}

unconstrained fn main() {
    foo()
}
